app/assets/stylesheets/_components.sass
a
  text-decoration: none
  color: $blue-dark

.box
  +wrapper
  article
    +shadow
    padding: 3vw

.post
  +clearfix
  +wrapper
  display: flex
  align-items: flex-start
  section
    flex: 0 1 auto
    box-sizing: border-box
    padding: 3vw 3vw 0 3vw
    margin-right: 2rem
    min-width: 35rem
    overflow: auto
    +shadow
    +mobile
      min-width: 0
    h1:first-of-type
      a
        color: inherit
        display: block
        +transition(color .1s)
        &:hover
          color: $blue-dark
  footer
    font-style: italic
    color: mix($dark, $blue, 30%)
    font-size: .8em
    padding: .5vw 0 1vw 0
    border-top: 2px solid  transparentize($light - #1a1a1a, .5)
    +clearfix
    +mobile
      font-size: 1em
    p
      float: right
      a
        color: inherit
        &:hover
          text-decoration: underline
    nav
      float: left
      ul
        list-style-type: none
      ul, li
        display: inline
        padding: 0
        li + li
          margin-left: 2rem
  aside
    flex: 0 0 auto
    font-size: .9em
    ul
      +shadow
      margin-bottom: 2rem
      li
        padding: .4rem
        a
          display: block
          position: relative
          padding: .8rem .5rem
          color: $dark
          border-left: 2px solid $blue-dark
          font-style: italic
          +lang-colors(border-color)
          &.edit
            border-color: $callout
          &:before
            position: absolute
            content: ''
            top: 0
            left: 0
            bottom: 0
            right: 100%
            background: #fff
            +transition(right .1s)
            z-index: -1
          &:hover:before
            right: 0
      li + li
        border-top: 2px solid transparentize($light - #1a1a1a, .5)
    +mobile
      ul
        background: none
        box-shadow: none
        margin-bottom: 0
        li
          display: inline-block
          +shadow
          margin: 0 .7rem 1rem 0
          + li
            border-top: 0

form
  .field_with_errors
    display: inline
  .formError
    display: inline
    color: $error
    font-size: .85em
  label
    font-weight: bold
  dl
    dd
      margin-bottom: 1em
  fieldset.actions
    padding-top: 2rem
  input[type='text'],
  textarea
    width: 100%
    padding: .5rem
    border: 1px solid $blue
    font-family: $primary-typeface
    line-height: 1.6
    box-sizing: border-box
    &:focus
      border-color: $blue-dark
      outline: none
  textarea.autosize
    resize: none
  input[type='submit']
    background: $blue-dark
    color: #fff
    padding: 1rem 2rem
    margin-right: 1rem
    border: none
    border-radius: 0
    &:hover
      background: lighten($blue-dark, 5%)

.copy
  h1, h2, h3, p, ul, ol
    margin: 0 0 1em 0
    +mobile
      margin-bottom: .7em
  h1
    font-size: 1.4em
  h2, h3
    font-size: 1.2em
  p, ul, ol
    line-height: 1.6
  ul, ol
    padding: 0 6vw
  ul
    list-style-type: disc
  ol
    list-style-type: decimal
  li + li
    margin-top: .2em
  pre
    margin-bottom: 1em
    overflow: auto
    code
      display: block
      background: $light
      padding: 1em
      width: 100%
      box-sizing: border-box
      line-height: 1.6
      white-space: pre-wrap
      overflow: auto
      +mobile
        padding: 1em
  code
    font-size: 95%
  +mobile
    margin-right: 0
    margin-bottom: 1rem
    font-size: .85em

